<resources>
    <string name="app_name">SmartHome</string>

    <!-- 网络相关 -->
    <string name="ip_config">192.168.1.105</string>
    <string name="json_code_error">json_code格式不正确</string>
    <string name="json_message_error">json_message格式不正确</string>

    <!-- 注册登陆-->
    <string name="input_name">输入用户名</string>
    <string name="input_phoneNumber">输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="button_register">注册</string>
    <string name="button_login">登陆</string>

    <!-- top-->
    <string name="top_current_title">当前页标题</string>

    <!--场景-->
    <string name="scene">场景</string>
    <string name="more">更多</string>

    <!--警告信息-->
    <string name="warn">警告信息</string>

    <!--日志消息-->
    <string name="log">日志</string>
    <string name="message">消息</string>
    <string name="log_message">日志消息</string>

    <!--天气-->
    <string name="weather">室内温度:\n13℃-20℃</string>

    <!--时间-->
    <string name="log_button_start_time">起始时间</string>
    <string name="log_button_end_time">结束时间</string>
    <string name="judge_time">结束不能早于起始时间</string>

    <!--设备-->
    <string name="equipment">设备</string>
    <string name="equipment_detail">设备详情</string>
    <string name="change_status">状态及更改状态</string>
    <string name="equipment_detail_time">13:15</string>
    <string name="equipment_detail_message">门窗打开</string>
    <string name="equipment_status_on">ON</string>
    <string name="equipment_status_off">OFF</string>
    <string name="equipment_edit">点我修改</string>
    <string name="equipment_name">设备名称</string>
    <string name="equipment_comment">设备备注</string>
    <string name="equipment_warn">是否提醒</string>

    <!--对话框-->
    <string name="dialog_button_cancel">取消</string>
    <string name="dialog_button_confirm">确定</string>
    <string name="operating">正在操作\.\.\.</string>

    <!--新增场景-->
    <string name="add_new_scene">添加场景</string>
    <string name="button_save">保存</string>
    <string name="button_back">返回</string>
    <string name="zhuwo">主卧</string>
    <string name="cheku">车库</string>
    <string name="keting">客厅</string>
    <string name="ciwo">次卧</string>
    <string name="yushi">浴室</string>
    <string name="canting">餐厅</string>
    <string name="qita">其他</string>
    <string name="input_warn">请填写相应信息</string>

    <!--搜索-->
    <string name="search">开始搜索</string>

    <!--视频监控-->
    <string name="cam_monitor">视频监控</string>
    <string name="exit_cam_monitor">退出监控</string>

</resources>
