<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top"
        layout="@layout/include_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/selector_edit_text"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/input_phoneNumber"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_phone"
            android:drawableBottom="@drawable/selector_edit_text"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/input_name"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:drawableBottom="@drawable/selector_edit_text"
            android:drawablePadding="@dimen/edit_text_drawable_padding"
            android:hint="@string/input_password"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_password"
            android:layout_marginTop="@dimen/button_margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/login"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/component_height"
                android:background="@color/button_normal_color"
                android:text="@string/button_login"
                android:textColor="@color/button_text_color"/>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:gravity="end"
        android:text="@string/button_register"
        android:textColor="@color/text_main_color"
        android:textSize="@dimen/text_title_size"/>

</RelativeLayout>
