<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/include_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_time"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_weight="0.5"
                android:background="@drawable/selector_button_background"
                android:hint="@string/log_button_start_time"
                android:textColor="@color/button_text_color"/>

            <Button
                android:id="@+id/end_time"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="0.5"
                android:background="@drawable/selector_button_background"
                android:hint="@string/log_button_end_time"
                android:textColor="@color/button_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_inner_margin"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/scene"
                android:layout_width="0dp"
                android:layout_height="@dimen/component_height"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_weight="0.5"
                android:hint="@string/scene"
                android:textColor="@color/button_text_color"/>

            <Spinner
                android:id="@+id/equipment"
                android:layout_width="0dp"
                android:layout_height="@dimen/component_height"
                android:layout_weight="0.5"
                android:hint="@string/equipment"
                android:textColor="@color/button_text_color"/>
        </LinearLayout>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/component_height"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:background="@color/button_normal_color"
            android:text="@string/search"
            android:textColor="@color/button_text_color"/>

        <cn.bingoogolapple.refreshlayout.BGARefreshLayout
            android:id="@+id/bgaRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/log_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_inner_margin"/>
        </cn.bingoogolapple.refreshlayout.BGARefreshLayout>


    </LinearLayout>

</LinearLayout>